[package]
name = "eulerswap"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy = "1.0.42"
alloy = {version ="1.0.42", features = ["providers", "signer-local", "rpc-types-eth", "node-bindings"] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tycho-core = "0.3.3"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.196.4", features = ["evm"] }
dotenv = "0.15.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tycho-execution = "0.136.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.17"
tycho-common = ">=0.113.0"

